[package]
name = "prairiedog"
version = "0.1.0"
authors = ["Arnaldo Garcia Rincon <agarrcia@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
argh.workspace = true
bytes.workspace = true
constants.workspace = true
log.workspace = true
nix.workspace = true
schnauzer.workspace = true
signpost.workspace = true
simplelog.workspace = true
snafu.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
bottlerocket-modeled-types.workspace = true

[dev-dependencies]
maplit.workspace = true

[build-dependencies]
generate-readme.workspace = true
