[package]
name = "settings-committer"
version = "0.1.0"
authors = ["Michael Patraw <patraw@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
apiclient.workspace = true
constants.workspace = true
snafu.workspace = true
http.workspace = true
log.workspace = true
serde_json.workspace = true
simplelog.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
generate-readme.workspace = true
