[package]
name = "shibaken"
version = "0.1.0"
authors = ["Patrick J.P. Culp <jpculp@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[features]
fips = ["imdsclient/fips"]

[dependencies]
argh.workspace = true
base64.workspace = true
imdsclient.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simplelog.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true

[build-dependencies]
generate-readme.workspace = true

[dev-dependencies]
tempfile.workspace = true
