[package]
name = "simple-settings-plugin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "settings"
path = "src/lib.rs"

[build-dependencies]
generate-readme.workspace = true

[dependencies]
abi_stable.workspace = true
serde.workspace = true
serde_json.workspace = true
bottlerocket-settings-plugin.workspace = true
bottlerocket-settings-models.workspace = true
