[package]
name = "storewolf"
version = "0.1.0"
authors = ["Zac Mrowicki <mrowicki@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
constants.workspace = true
bottlerocket-release.workspace = true
datastore.workspace = true
log.workspace = true
models.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
semver.workspace = true
simplelog.workspace = true
snafu.workspace = true
toml.workspace = true
bottlerocket-modeled-types.workspace = true

[build-dependencies]
generate-readme.workspace = true

[[bin]]
name = "storewolf"
path = "src/main.rs"

[lib]
name = "storewolf"
path = "src/lib.rs"
