[package]
name = "sundog"
version = "0.1.0"
authors = ["mrowicki <mrowicki@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
apiclient.workspace = true
constants.workspace = true
datastore.workspace = true
http.workspace = true
log.workspace = true
models.workspace = true
serde_json.workspace = true
simplelog.workspace = true
shlex.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread"] }

[build-dependencies]
generate-readme.workspace = true
