[package]
name = "thar-be-settings"
version = "0.1.0"
authors = ["Zac Mrowicki <mrowicki@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
apiclient.workspace = true
constants.workspace = true
handlebars.workspace = true
http.workspace = true
itertools.workspace = true
log.workspace = true
models.workspace = true
nix.workspace = true
schnauzer.workspace = true
serde_json.workspace = true
simplelog.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
generate-readme.workspace = true

[dev-dependencies]
maplit.workspace = true
